--- a/Pikachu/UI/MainWindow.xaml
+++ b/Pikachu/UI/MainWindow.xaml
@@ -1,40 +1,47 @@
-﻿<Window x:Class="Pikachu.MainWindow"
+﻿<Window xmlns:UserControl="clr-namespace:Pikachu.UI.UserControl"  x:Class="Pikachu.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Pikachu"
         mc:Ignorable="d"
-        Title="MainWindow" Height="300" Width="400" WindowStyle="None" Background="#FF252529" MinWidth="300" MinHeight="400" MouseLeftButtonDown="Window_MouseLeftButtonDown" MouseDoubleClick="Window_MouseDoubleClick">
+        Title="MainWindow" Height="450" Width="526" WindowStyle="None" Background="#FF252529" MinWidth="526" MinHeight="450" MouseLeftButtonDown="Window_MouseLeftButtonDown" MouseDoubleClick="Window_MouseDoubleClick">
     <Window.Resources>
-        <Storyboard x:Key="MenuOn">
-            <ThicknessAnimationUsingKeyFrames Storyboard.TargetProperty="(FrameworkElement.Margin)" Storyboard.TargetName="grid">
-                <EasingThicknessKeyFrame KeyTime="0" Value="-300,0,0,0">
-                    <EasingThicknessKeyFrame.EasingFunction>
-                        <ExponentialEase EasingMode="EaseInOut"/>
-                    </EasingThicknessKeyFrame.EasingFunction>
-                </EasingThicknessKeyFrame>
-                <EasingThicknessKeyFrame KeyTime="0:0:0.3" Value="0">
-                    <EasingThicknessKeyFrame.EasingFunction>
-                        <ExponentialEase EasingMode="EaseInOut"/>
-                    </EasingThicknessKeyFrame.EasingFunction>
-                </EasingThicknessKeyFrame>
-            </ThicknessAnimationUsingKeyFrames>
-        </Storyboard>
-        <Storyboard x:Key="MenuOff">
-            <ThicknessAnimationUsingKeyFrames Storyboard.TargetProperty="(FrameworkElement.Margin)" Storyboard.TargetName="grid">
-                <EasingThicknessKeyFrame KeyTime="0" Value="0">
-                    <EasingThicknessKeyFrame.EasingFunction>
-                        <ExponentialEase EasingMode="EaseInOut"/>
-                    </EasingThicknessKeyFrame.EasingFunction>
-                </EasingThicknessKeyFrame>
-                <EasingThicknessKeyFrame KeyTime="0:0:0.3" Value="-300,0,0,0">
-                    <EasingThicknessKeyFrame.EasingFunction>
-                        <ExponentialEase EasingMode="EaseInOut"/>
-                    </EasingThicknessKeyFrame.EasingFunction>
-                </EasingThicknessKeyFrame>
-            </ThicknessAnimationUsingKeyFrames>
-        </Storyboard>
+
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Style/WindowStyle.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+
+            <Storyboard x:Key="MenuOn">
+                <ThicknessAnimationUsingKeyFrames Storyboard.TargetProperty="(FrameworkElement.Margin)" Storyboard.TargetName="MenuWindow">
+                    <EasingThicknessKeyFrame KeyTime="0" Value="-300,0,0,0">
+                        <EasingThicknessKeyFrame.EasingFunction>
+                            <CubicEase EasingMode="EaseInOut"/>
+                        </EasingThicknessKeyFrame.EasingFunction>
+                    </EasingThicknessKeyFrame>
+                    <EasingThicknessKeyFrame KeyTime="0:0:0.25" Value="0">
+                        <EasingThicknessKeyFrame.EasingFunction>
+                            <CubicEase EasingMode="EaseInOut"/>
+                        </EasingThicknessKeyFrame.EasingFunction>
+                    </EasingThicknessKeyFrame>
+                </ThicknessAnimationUsingKeyFrames>
+            </Storyboard>
+            <Storyboard x:Key="MenuOff">
+                <ThicknessAnimationUsingKeyFrames Storyboard.TargetProperty="(FrameworkElement.Margin)" Storyboard.TargetName="MenuWindow">
+                    <EasingThicknessKeyFrame KeyTime="0" Value="0">
+                        <EasingThicknessKeyFrame.EasingFunction>
+                            <CubicEase EasingMode="EaseInOut"/>
+                        </EasingThicknessKeyFrame.EasingFunction>
+                    </EasingThicknessKeyFrame>
+                    <EasingThicknessKeyFrame KeyTime="0:0:0.25" Value="-300,0,0,0">
+                        <EasingThicknessKeyFrame.EasingFunction>
+                            <CubicEase EasingMode="EaseInOut"/>
+                        </EasingThicknessKeyFrame.EasingFunction>
+                    </EasingThicknessKeyFrame>
+                </ThicknessAnimationUsingKeyFrames>
+            </Storyboard>
+        </ResourceDictionary>
     </Window.Resources>
 
     <WindowChrome.WindowChrome>
@@ -47,15 +54,15 @@
 
         <Grid Height="50" x:Name="Title" VerticalAlignment="Top">
             <Rectangle Height="50" VerticalAlignment="Top"/>
-            <TextBlock HorizontalAlignment="Center" Margin="0" TextWrapping="Wrap" Text="Characters" VerticalAlignment="Center" Foreground="#FFDBD4DE" FontFamily="Malgun Gothic" FontWeight="Bold" FontSize="14"/>
-            <Grid x:Name="MenuButton" Width="50" Height="50" Background="#FF252529" HorizontalAlignment="Left" VerticalAlignment="Top" MouseEnter="TitleButton_MouseEnter" MouseLeave="TitleButton_MouseLeave" MouseLeftButtonDown="MenuButton_MouseLeftButtonDown">
+            <TextBlock HorizontalAlignment="Center" Margin="0" TextWrapping="Wrap" Text="MY Characters" VerticalAlignment="Center" Foreground="#FFDBD4DE" FontFamily="Noto Sans CJK KR Bold" FontSize="14"/>
+            <Button x:Name="MenuButton" Style="{StaticResource ButtonStyle}" Width="50" Height="50" HorizontalAlignment="Left" VerticalAlignment="Top" Click="MenuButton_Click">
                 <Grid Width="16" Height="16" x:Name="Menu" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0">
                     <Rectangle Height="1" VerticalAlignment="Top" Fill="White" Margin="0,2,0,0"/>
                     <Rectangle Height="1" VerticalAlignment="Center" Fill="White"/>
                     <Rectangle Height="1" VerticalAlignment="Bottom" Fill="White" Margin="0,0,0,2"/>
                 </Grid>
-            </Grid>
-            <Grid x:Name="CloseButton" Width="50" Height="50" Background="#FF252529" HorizontalAlignment="Right" VerticalAlignment="Top" MouseEnter="TitleButton_MouseEnter" MouseLeave="TitleButton_MouseLeave" MouseLeftButtonDown="CloseButton_MouseLeftButtonDown">
+            </Button>
+            <Button x:Name="CloseButton" Style="{StaticResource ButtonStyle}" Width="50" Height="50" HorizontalAlignment="Right" VerticalAlignment="Top" Click="CloseButton_Click">
                 <Grid Width="16" Height="16" x:Name="Close" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0">
                     <Rectangle Height="1" VerticalAlignment="Center" Fill="White" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" Width="16">
                         <Rectangle.RenderTransform>
@@ -78,16 +85,94 @@
                         </Rectangle.RenderTransform>
                     </Rectangle>
                 </Grid>
-            </Grid>
+            </Button>
+
+
         </Grid>
 
-        <Grid x:Name="grid" Width="250" HorizontalAlignment="Left" Background="#FF252529" Margin="-300,0,0,0">
+        <Grid x:Name="Main" Margin="0,50,0,0">
+
+            <ScrollViewer Template="{DynamicResource DarkScrollViewer}">
+                <ScrollViewer.Resources>
+                    <ControlTemplate x:Key="DarkScrollViewer" TargetType="{x:Type ScrollViewer}">
+                        <Grid x:Name="Grid" Background="{TemplateBinding Background}">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+                            <ScrollContentPresenter x:Name="PART_ScrollContentPresenter" CanContentScroll="{TemplateBinding CanContentScroll}" CanHorizontallyScroll="False" CanVerticallyScroll="False" ContentTemplate="{TemplateBinding ContentTemplate}" Content="{TemplateBinding Content}" Grid.Column="0" Margin="{TemplateBinding Padding}" Grid.Row="0"/>
+                            <ScrollBar x:Name="PART_VerticalScrollBar" Template="{StaticResource VerticalScrollBar}" Opacity="1" AutomationProperties.AutomationId="VerticalScrollBar" Cursor="Arrow" Grid.Column="1" Maximum="{TemplateBinding ScrollableHeight}" Minimum="0" Grid.Row="0" Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}" Value="{Binding VerticalOffset, Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}" ViewportSize="{TemplateBinding ViewportHeight}" BorderBrush="{x:Null}" Background="{x:Null}" Width="5"/>
+                        </Grid>
+                    </ControlTemplate>
+                </ScrollViewer.Resources>
+                <Grid>
+                    <TextBlock Foreground="White" FontSize="36" Margin="20,25,0,25" FontFamily="Noto Sans CJK KR Bold"><Run FontFamily="Noto Sans CJK KR Thin" Text="M"/><Run FontFamily="Noto Sans CJK KR Thin" Text="Y"/><Run Text=" Character"/><Run Text="s"/><InlineUIContainer>
+                    </InlineUIContainer></TextBlock>
+                    <UserControl:CharacterListBox Margin="0,100,0,0" VerticalAlignment="Top"/>
+                    <!--<WrapPanel Name="wrapPanel1" VerticalAlignment="Top" Margin="0,100,0,0">
+
+                        <Grid Margin="20,20,20,20" Width="200" Height="250">
+                            <Rectangle Fill="#FF252529" RadiusX="20" RadiusY="20" StrokeThickness="0">
+                                <Rectangle.Effect>
+                                    <DropShadowEffect Direction="270" Opacity="0.35" ShadowDepth="10" BlurRadius="25" Color="#FF252529"/>
+                                </Rectangle.Effect>
+                            </Rectangle>
+                            <TextBlock Text="Pikachu" Margin="0,150,0,0" FontFamily="Noto Sans CJK KR Black" FontSize="16" Foreground="White" VerticalAlignment="Center" HorizontalAlignment="Center" ></TextBlock>
+                            <Image HorizontalAlignment="Center" VerticalAlignment="Center" Source="/Pikachu;component/Resources/C_pikachu.png" Width="100" Height="100" Margin="0,0,0,50"/>
+                        </Grid>
+                        <Grid  Margin="20,20,20,20" Width="200" Height="250">
+                            <Rectangle  Fill="#FF252529" RadiusX="20" RadiusY="20" StrokeThickness="0">
+                                <Rectangle.Effect>
+                                    <DropShadowEffect Direction="270" Opacity="0.35" ShadowDepth="10" BlurRadius="25" Color="#FF252529"/>
+                                </Rectangle.Effect>
+                            </Rectangle>
+                            <TextBlock Text="Pikachu" Margin="0,150,0,0" FontFamily="Noto Sans CJK KR Black" FontSize="16" Foreground="White" VerticalAlignment="Center" HorizontalAlignment="Center" ></TextBlock>
+                            <Image HorizontalAlignment="Center" VerticalAlignment="Center" Source="/Pikachu;component/Resources/C_pikachu.png" Width="100" Height="100" Margin="0,0,0,50"></Image>
+                        </Grid>
+                        <Grid Margin="20,20,20,20" Width="200" Height="250">
+                            <Rectangle Fill="#FF252529" RadiusX="20" RadiusY="20" StrokeThickness="0">
+                                <Rectangle.Effect>
+                                    <DropShadowEffect Direction="270" Opacity="0.35" ShadowDepth="10" BlurRadius="25" Color="#FF252529"/>
+                                </Rectangle.Effect>
+                            </Rectangle>
+                            <TextBlock Text="Pikachu" Margin="0,150,0,0" FontFamily="Noto Sans CJK KR Black" FontSize="16" Foreground="White" VerticalAlignment="Center" HorizontalAlignment="Center" ></TextBlock>
+                            <Image HorizontalAlignment="Center" VerticalAlignment="Center" Source="/Pikachu;component/Resources/C_pikachu.png" Width="100" Height="100" Margin="0,0,0,50"></Image>
+                        </Grid>
+                        <Grid  Margin="20,20,20,20" Width="200" Height="250">
+                            <Rectangle  Fill="#FF252529" RadiusX="20" RadiusY="20" StrokeThickness="0">
+                                <Rectangle.Effect>
+                                    <DropShadowEffect Direction="270" Opacity="0.35" ShadowDepth="10" BlurRadius="25" Color="#FF252529"/>
+                                </Rectangle.Effect>
+                            </Rectangle>
+                            <TextBlock Text="Pikachu" Margin="0,150,0,0" FontFamily="Noto Sans CJK KR Black" FontSize="16" Foreground="White" VerticalAlignment="Center" HorizontalAlignment="Center" ></TextBlock>
+                            <Image HorizontalAlignment="Center" VerticalAlignment="Center" Source="/Pikachu;component/Resources/C_pikachu.png" Width="100" Height="100" Margin="0,0,0,50"></Image>
+                        </Grid>
+
+                    </WrapPanel>-->
+                </Grid>
+
+            </ScrollViewer>
+            <Rectangle VerticalAlignment="Top" Height="25" Margin="0,0,18,0" >
+                <Rectangle.Fill>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="#FF252529" Offset="0"/>
+                        <GradientStop Offset="1" Color="#00252529"/>
+                    </LinearGradientBrush>
+                </Rectangle.Fill>
+            </Rectangle>
+        </Grid>
+
+        <Grid x:Name="MenuWindow" Width="250" HorizontalAlignment="Left" Background="#FF252529" Margin="-300,0,0,0">
             <Grid.Effect>
                 <DropShadowEffect Direction="360" Opacity="0.25" BlurRadius="35"/>
             </Grid.Effect>
             <Grid x:Name="MenuTitle" Height="50" VerticalAlignment="Top">
                 <TextBlock HorizontalAlignment="Left" Margin="16,0,0,0" TextWrapping="Wrap" Text="Menu" VerticalAlignment="Center" Foreground="#FFDBD4DE" FontFamily="Malgun Gothic" FontWeight="Bold" FontSize="14"/>
-                <Grid x:Name="BackButton" Width="50" Height="50" Background="#FF252529" HorizontalAlignment="Right" VerticalAlignment="Top" MouseEnter="TitleButton_MouseEnter" MouseLeave="TitleButton_MouseLeave" MouseLeftButtonDown="BackButton_MouseLeftButtonDown">
+                <Button  x:Name="BackButton" Style="{StaticResource ButtonStyle}" Width="50" Height="50" HorizontalAlignment="Right" VerticalAlignment="Top" Click="BackButton_Click">
                     <Grid Width="16" Height="16" x:Name="Back" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0">
                         <Rectangle Height="1" VerticalAlignment="Top" Fill="White" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" Width="9" Margin="0,4,0,0">
                             <Rectangle.RenderTransform>
@@ -109,11 +194,23 @@
                                 </TransformGroup>
                             </Rectangle.RenderTransform>
                         </Rectangle>
-                        <Rectangle Height="1" VerticalAlignment="Center" Fill="White" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Right" Width="15" Margin="0">
-
-                        </Rectangle>
+                        <Rectangle Height="1" VerticalAlignment="Center" Fill="White" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Right" Width="15" Margin="0"/>
                     </Grid>
-                </Grid>
+                </Button>
+            </Grid>
+            <Grid x:Name="MenuContent" Margin="0,50,0,0">
+                <StackPanel>
+                    <Button Style="{StaticResource MenuButtonStyle}" Height="50" VerticalAlignment="Top" Background="#FF252529" BorderBrush="{x:Null}" Foreground="#FFDBD4DE" >
+                        <TextBlock Text="My Characters" HorizontalAlignment="Left" Margin="25,0,0,0"/>
+                    </Button>
+                    <Button Style="{StaticResource MenuButtonStyle}" Height="50" VerticalAlignment="Top" Background="#FF252529" BorderBrush="{x:Null}" Foreground="#FFDBD4DE" >
+                        <TextBlock Text="Shop" HorizontalAlignment="Left" Margin="25,0,0,0"/>
+                    </Button>
+                    <Button Style="{StaticResource MenuButtonStyle}" Height="50" VerticalAlignment="Top" Background="#FF252529" BorderBrush="{x:Null}" Foreground="#FFDBD4DE" >
+                        <TextBlock Text="Setting" HorizontalAlignment="Left" Margin="25,0,0,0"/>
+                    </Button>
+                </StackPanel>
+
             </Grid>
         </Grid>
     </Grid>
